-suppression dans tous les fichiers html de la taille de l'icone fa-handshake-angle issue de font awesome; -suppression des propriétés du footer dans le fichier nav.scss pour les réunir dans le fichier container.scss; -suppression de la propriété align-items indiquée pour les cartes de restaurant dans la version tablette  car inutile.

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                         restaurant</a></li>
                 <!--deuxième lien avec une icone qui renverrons vers les propositions de partenariat-->
                 <li><a class="nav__link-icon nav__link--color" href="#" title="click here"><i
-                            class="fa-solid fa-handshake-angle fa-sm"></i>Devenir
+                            class="fa-solid fa-handshake-angle"></i>Devenir
                         partenaire</a></li>
                 <!--troisième lien qui renverra vers les mentions légales-->
                 <li><a class="nav__link nav__link--color" href="#" title="click here">Mentions légales</a></li>
