--- a/menu_the_palette_of_taste.html
+++ b/menu_the_palette_of_taste.html
@@ -196,7 +196,7 @@
                 <!--premier lien avec une icone qui renverrons vers les propositions de restaurants-->
                 <li><a class="nav__link-icon nav__link--color" href="#" title="click here"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a></li>
                 <!--deuxième lien avec une icone qui renverrons vers les propositions de partenariat-->
-                <li><a class="nav__link-icon nav__link--color" href="#" title="click here"><i class="fa-solid fa-handshake-angle fa-sm"></i>Devenir partenaire</a></li>
+                <li><a class="nav__link-icon nav__link--color" href="#" title="click here"><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</a></li>
                 <!--troisième lien qui renverra vers les mentions légales-->
                 <li><a class="nav__link nav__link--color" href="#" title="click here">Mentions légales</a></li>
                 <!--quatrième lien qui renvoie et active le mail de contact-->
