-changement dans tous les fichiers html : ajout de la class "logo" dans le footer pour appliquer des règles Css communes; -changement dans tous les fichiers html des pages menus : suppression du loader pour laisser place à l'animation sur les menus au chargement et ajout du commentaire pour le background du body; -ajout des commentaires dans les fichiers Sass et ceux compilés dans css; -ajout dans typography des règles pour le sélecteur nav__logo--footer; -réorganisation de l'emplacement des sélecteurs et leurs règles dans loader.scss; -changements dans nav.scss : ajout de la largeur pour le sélecteur container et simplification des sélecteurs pour les icones; -dans home_page.scss : réorganisation de l'emplacement du sélecteur heading et ajout du préfixe pour le border des cartes; -modifcation dans menu.scss : ajout de la variable pour les bordures des menus, suppression du délai pour démarrer l'animation faisant apparaître les menus et réorganisation de l'emplacement des sélecteurs des animations pour une meilleure comprhéension de son enchaînement.

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
         <!--pied de page avec le menu de navigation pour le site-->
         <nav class="nav">
             <!--logo du site-->
-            <h2 class="nav__logo">ohmyfood</h2>
+            <h2 class="logo nav__logo--footer">ohmyfood</h2>
             <!--liste des liens du site-->
             <ul class="nav__container">
                 <!--premier lien avec une icone qui renverrons vers les propositions de restaurants-->
