--- a/menu_the_enchanted_note.html
+++ b/menu_the_enchanted_note.html
@@ -16,23 +16,8 @@
     <link rel="stylesheet" href="main.css">
     <title>Ohmyfood : carte du restaurant La note enchantée</title>
 </head>
-
+<!--background pour la version desktop-->
 <body class="enchanted-note--bg-page">
-    <!--loader affiché avant apparition de la page d'accueil-->
-    <div class="loader">
-        <!--divs contenant le logo animé-->
-        <div class="loader__heading">
-            <div>Oh</div>
-            <div>my</div>
-            <div>food </div>
-        </div>
-        <!--divs contenant les points animés-->
-        <div class="loader-dots">
-            <div></div>
-            <div></div>
-            <div></div>
-        </div>
-    </div>
     <!--entête contenant l'icone servant de lien vers la page d'accueil et le logo du site-->
     <header class="header-menu">
         <div class="header-menu__return">
@@ -201,7 +186,7 @@
         <!--pied de page avec le menu de navigation pour le site-->
         <nav class="nav">
             <!--logo du site-->
-            <h2 class="nav__logo">ohmyfood</h2>
+            <h2 class="logo nav__logo--footer">ohmyfood</h2>
             <!--liste des liens du site-->
             <ul class="nav__container">
                 <!--premier lien avec une icone qui renverrons vers les propositions de restaurants-->
