-changement dans index.html : ajout de la meta description du site dans le head

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="https://kit.fontawesome.com/2f306ee3dd.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="main.css">
     <title>Ohmyfood : site de réservation gastronomique</title>
+    <meta name="description" content="Ohmyfood est un site permettant de réserver en ligne vos menus préférés dans les plus grands restaurants gastronomiques de PARIS.">
 </head>
 
 <body>
