-Dans index.html, rectification des coquilles dans le texte du bouton et de la carte "A la française"; -dans typography.scss, réduction de la taille des paragraphes dans les menus pour éviter l'effet de l'ellipsis; -dans mixins.scss, réduction de la marge intérieure pour éviter de tronquer le texte des menus; -dans menu.scss : suppression de la marge intérieure prévue pour les titres et paragraphes des menus en version petits mobiles car redondant avec la marge qui vient d'être modifiée dans mixins.scss; -dans home_page.scs : réduction de la marge en haut et en bas de la partie "fonctionnement" et modification des dimensions des numéros; -changements dans loader.scss : ajustement de la taille du logo et des effets de l'animation.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <p class="presentation__discover">Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
             <!--bouton renvoyant à la découverte des restaurants-->
             <button class="button-action">
-                Explorez nos restaurants
+                Explorer nos restaurants
             </button>
 
         </section>
@@ -152,7 +152,7 @@
                             </div>
                             <!--informations sur le restaurant-->
                             <div class="restaurant__footer">
-                                <h3>À la Française</h3>
+                                <h3>À la française</h3>
                                 <p>Cité Rouge</p>
                             </div>
                         </div>
