-modification des commentaires dans index.html, btn_new.scss, button_like.scss, loader.scss et container.scss; -changements dans typography.scss : insertion d'une taille plus grande pour la font des h3 et paragraphes en version desktop; -modifications dans loader.scss: ajustement du timing; -changement dans home_page.scss : en version tablette, modification de couleur des blocs pour la partie "fonctionement" et ajout de marges pour la partie restaurant; -éclaircissement de la couleur grise de background-container.

--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <!--[if IE]>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0">
     <link rel="icon" type="image/png" href="assets/logo/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,7 +17,7 @@
 </head>
 
 <body>
-    <!--loader affiché avant apparition de la page d'accueil-->
+    <!--loader avant apparition de la page d'accueil-->
     <div class="loader">
         <!--divs contenant le logo animé-->
         <div class="loader__heading">
@@ -42,25 +40,25 @@
     <main class="home-main-container">
         <!--partie correspondant à la localisation du restaurant et présentation du site-->
         <section class="presentation">
-            <!--partie avec localisation des restaurants-->
+            <!--localisation des restaurants-->
             <div class="presentation__location"><i class="fa-solid fa-location-dot"></i>
                 <p>Paris, Belleville</p>
             </div>
             <!--titre et paragraphe de présentation-->
             <h1 class="presentation__heading">Réservez le menu qui vous convient</h1>
             <p class="presentation__discover">Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
-            <!--bouton renvoyant à la découverte des restaurants-->
+            <!--bouton explorer les restaurants-->
             <button class="button-action">
                 Explorer nos restaurants
             </button>
 
         </section>
-        <!--conteneur avec indications sur le fonctionnement du site -->
+        <!--conteneur de "fonctionnement" avec titre -->
         <section class="functioning">
             <!--titre du conteneur-->
             <h2 class="functioning__heading">Fonctionnement</h2>
 
-            <!--conteneur de la présentation du fonctionnement du site avec trois étapes-->
+            <!--conteneur avec les trois étapes de "fonctionnement"-->
             <div class="functioning__container">
                 <!--première étape avec son numéro et son icone-->
                 <p class="functioning__explain"><span class="functioning__number">1</span>
