-changement dans index.html : modification de la balise du bouton "explorer nos restaurants" qui est transformée en un lien renvoyant à la section des cartes des restaurants; -modifications dans button.scss : la taille du texte est légèrement augmentée et les propriétés flex sont rajoutées pour centrer le texte.

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
             <h1 class="presentation__heading">Réservez le menu qui vous convient</h1>
             <p class="presentation__discover">Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
             <!--bouton explorer les restaurants-->
-            <button class="button-action">
+            <a href="#explore-restaurant" class="button-action">
                 Explorer nos restaurants
-            </button>
+            </a>
 
         </section>
         <!--conteneur de "fonctionnement" avec titre -->
@@ -78,7 +78,7 @@
         </section>
 
         <!--conteneur présentant les restaurants-->
-        <section class="container-restaurant">
+        <section id="explore-restaurant" class="container-restaurant">
 
             <!--titre du conteneur-->
             <h2 class="container-restaurant__heading">Restaurants</h2>
